--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "9.5",
         "php-mock/php-mock": "^2.6",
-        "php-mock/php-mock-phpunit": "^2.13"
+        "php-mock/php-mock-phpunit": "^2.13",
+        "phpunit/phpunit": "9.6"
     },
     "autoload": {
         "psr-4": {
